WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134527
AX: VoiceOver does not read aria-expanded attribute on controls in Safari
https://bugs.webkit.org/show_bug.cgi?id=134527
Summary
AX: VoiceOver does not read aria-expanded attribute on controls in Safari
chris fleizach
Reported
2014-07-01 17:00:51 PDT
Steps to Reproduce: 1. With Mobile Safari and VoiceOver on, go to www.paypal.com. 2. Touch the menu (hamburger icon) in the top left corner and listen to what VoiceOver says. <
rdar://problem/16504538
>
Attachments
patch
(1.47 KB, patch)
2014-07-01 17:03 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-07-01 17:03:34 PDT
Created
attachment 234222
[details]
patch
WebKit Commit Bot
Comment 2
2014-07-03 08:46:59 PDT
Comment on
attachment 234222
[details]
patch Clearing flags on attachment: 234222 Committed
r170753
: <
http://trac.webkit.org/changeset/170753
>
WebKit Commit Bot
Comment 3
2014-07-03 08:47:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug