AX: VoiceOver does not read aria-expanded attribute on controls in Safari https://bugs.webkit.org/show_bug.cgi?id=134527

Reviewed by Mario Sanchez Prada.

Expose whether the ARIA expanded property is present or not.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilitySupportsARIAExpanded]):


Canonical link: https://commits.webkit.org/152572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170753 268f45cc-cd09-0410-ab3c-d52691b4dbfc